dx/force-app/main/default/objects/ltng_CompValidationBase__c/ltng_CompValidationBase__c.object-meta.xml
<CustomObject>
    <description>Object to test validation with</description>
    <label>Comp Validation Base</label>
    <nameField>
        <label>Comp Validation Base Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comp Validation Bases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>