dx/force-app/main/default/objects/ltng_CompValidationBase__c/fields/Level1__c.field-meta.xml
<CustomField>
    <fullName>Level1__c</fullName>
    <label>Level 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>