dx/force-app/main/default/objects/ltng_CompValidationBase__c/fields/Level2__c.field-meta.xml
<CustomField>
    <fullName>Level2__c</fullName>
    <label>Level 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>