dx/force-app/main/default/objects/ltng_CompValidationBase__c/fields/Level3__c.field-meta.xml
<CustomField>
    <fullName>Level3__c</fullName>
    <label>Level 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>